--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 
 <head>
   <title>Reunion backend</title>
+  <link rel="icon" href="/img/favicon.png">
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
